--- a/templates/equipment-sheet.html
+++ b/templates/equipment-sheet.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <!-- SUPPLY -->
-                    <div class="table__entry table__entry--no-border table__entry--mAttacks">
+                    <div class="table__entry table__entry--no-border table__entry--equipment-form">
                         <div class="table__field">
                             <label class="table__data table__data--left-aligned">Supply: </label>
                         </div>
@@ -69,7 +69,7 @@
         <label class="frame__title layout__gap">Gaming Stats Data</label>
         <div class="frame frame__placement frame--no-lr-border">
             <div class="table">
-                <div class="table__entry table__entry--no-border table__entry--mAttacks">
+                <div class="table__entry table__entry--no-border table__entry--equipment-form">
                         <div class="table__field">
                             <label class="table__data table__data--left-aligned">Bonus: </label>
                         </div>
@@ -101,7 +101,7 @@
             <label class="frame__title layout__gap">Crafting Data</label>
             <div class="frame frame__placement frame--no-lr-border">
                 <div class="table">
-                    <div class="table__entry table__entry--no-border table__entry--mAttacks">
+                    <div class="table__entry table__entry--no-border table__entry--equipment-form">
                         <div class="table__field">
                             <label class="table__data table__data--left-aligned">Materials: </label>
                         </div>
