--- a/templates/spell-sheet.html
+++ b/templates/spell-sheet.html
@@ -1,8 +1,8 @@
-<form class="{{cssClass}}" autocomplete="off" style="font-size: 0.9rem">
+<form class="{{cssClass}}" autocomplete="off" style="font-size: 0.9rem; max-height:600px">
     
     <!-- EDIT -->
     {{#if isBeingEdited}}
-    <div class="layout layout--spell-edit">
+    <div class="layout layout--spell-edit"  style="min-height:0">
         <!-- SPELL ICON -->
         <div class="layout__picture">
                 <img class="profile-img--small" src="{{item.img}}" data-edit="img" title="{{item.name}}"
@@ -13,12 +13,12 @@
             <input class= "header-title header-title--small" type="text" name="name" value="{{item.name}}" placeholder="Name">
         </div>
         
-        <div class="layout__body">
+        <div class="layout__body"  style="min-height:0">
             
             <div class="frame frame__placement frame--no-lr-border layout__gap">
                 <div class="table">
                     
-                    <div class="table__entry--no-border table__entry--mAttacks">
+                    <div class="table__entry--no-border table__entry--spell-form">
                         <!-- MAGIC DISCIPLINE -->
                         <div class="table__field">
                             <label class="table__data table__data--left-aligned">Discipline: </label>
@@ -48,7 +48,7 @@
                         </div>
                     </div>
 
-                    <div class="table__entry--no-border" style="grid-template-columns: 34% 22% 22% 22%">
+                    <div class="table__entry--no-border" style="grid-template-columns: 20% 25% 25% 30%">
                             <!-- CASTING TIME -->
                             <div class="table__field">
                                 <label class="table__data table__data--left-aligned">Casting Time: </label>
@@ -64,7 +64,7 @@
                             </div>
                     </div>    
 
-                    <div class="table__entry--no-border table__entry--mAttacks">
+                    <div class="table__entry--no-border table__entry--spell-form">
                         <!-- RANGE -->
                         <div class="table__field">
                             <label class="table__data table__data--left-aligned">Range: </label>
@@ -105,7 +105,7 @@
             <!-- <div class="frame frame__placement frame--flexible layout__gap" style="min-height: 100px" data-edit="data.description" contenteditable="true">
                 {{{formatDisplay data.description}}}
             </div> -->
-            <div class="frame frame--flexible frame--can-scroll layout__gap">
+            <div class="frame frame--flexible frame--can-scroll layout__gap" style="min-height:0">
                 <label class="frame__title">Description</label>
                 {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
             </div>
@@ -116,7 +116,7 @@
     </div>
     {{else}}
     <!-- DISPLAY -->
-    <div class="layout layout--spell-display" style="height: fit-content">
+    <div class="layout layout--spell-display" style="height: min(600px, 600px); max-height: 610px; min-height:0">
 
         <header class="layout__header">
             <div class="table">
@@ -143,8 +143,17 @@
         </header>
         
         <div class="layout__body">
-            <div class="frame frame--no-lr-border frame--flexible frame__placement layout__gap">
+            <div class="frame frame--no-lr-border frame__placement layout__gap">
                 <ul>
+                    <li>
+                        <span>
+                            <strong>RANK: </strong>
+                            {{formatDisplay data.rank}}
+                            {{#unless (eq data.castingtime "Normal")}}
+                            , {{formatDisplay data.castingtime}}
+                            {{/unless}}
+                        </span>
+                    </li>
                     <li>
                         <span>
                             <strong>RANGE: </strong>
@@ -164,10 +173,15 @@
                         </span>
                     </li>
                 </ul>
-            </div>    
-            <div class="frame frame--flexible frame--no-border layout__gap frame__placement">
-                <label class="frame__title">Description</label>
-                {{{data.description}}}
+            </div>
+        </div>
+
+        <div class="layout__main" style="min-height:0; margin:5px">
+            <label class="frame__title">Description</label>
+            <div class="frame frame--flexible"  style="height: fit-content; min-height:0; overflow-y: scroll; padding: 10px">
+                <!-- <div style="overflow-y: scroll"> -->
+                    {{{data.description}}}
+                <!-- </div> -->
             </div>
             <div>
                 <i class="fas fa-edit item-edit" style="font-size: 1.5em; padding: 5px; float: right"></i>
