--- a/templates/stronghold-sheet.html
+++ b/templates/stronghold-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} layout layout--Stronghold {{actor._id}}" autocomplete="off">
+<form class="{{cssClass}} layout layout--Stronghold" data-selector={{actor._id}} autocomplete="off">
     <!-- TOP-LEFT - PROFILE PICTURE -->
     <div class="layout__picture">
         <img class="profile-img--big player-image" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
